# Vortex-Edge-Inference

./: .gitignore  CMakeLists.txt  README.md
include/: v4l2_device.h
src/: main  main.cpp  v4l2_device.cpp
